[package]
name = "Spriter"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.13.2"
bevy_egui = { version = "0.27.1"}
egui = { version = "0.27", default-features = false, features = ["bytemuck"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }


[profile.dev]
incremental = true
debug = 0

